changes in placeholder

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <div class="input-box">
                 <span class="icon"><img src="envelope.svg" alt=""></span>
                 <input type="email" required>
-                <label >Email</label>
+                <label >Enter Your Email</label>
             </div>
 
             <div class="input-box">
                 <span class="icon"><img src="lock.svg" alt=""></span>
                 <input type="password" required>
-                <label >Password</label>
+                <label >Enter Your Password</label>
                 
             </div>
             
